Change tooltip position to fixed with higher z-index

--- a/style.css
+++ b/style.css
@@ -140,8 +140,9 @@ body {
     font-weight: 700;
 }
 /* line tooltip (only for member_linecharts.js) */
-.tooltip {
-  position: absolute;
+.tooltip{
+  position: fixed;
+  z-index: 20000;
   background: white;
   border: 1px solid #ccc;
   padding: 6px 10px;
